# GLML

./: .gitignore  GLML.opam  INFORMATION.md  Makefile  README.md  dune-project  flake.nix  index.html  main.js  vercel.json
benchmark/: bench.ml
compiler/: anf.ml  anf.mli  chomp.ml  chomp.mli  compiler_error.ml  compiler_error.mli  defunctionalize.ml  defunctionalize.mli  desugar.ml  desugar.mli  dune  frontend.ml  frontend.mli  glml_compiler.ml  glml_compiler.mli  glsl.ml  glsl.mli  lambda_lift.ml  lambda_lift.mli  lexer.ml  lexer.mli  lift_consts.ml  lift_consts.mli  lower_variants.ml  lower_variants.mli  monomorphize.ml  monomorphize.mli  parser.ml  parser.mli  patch_main.ml  patch_main.mli  promote_ints.ml  promote_ints.mli  remove_placeholder.ml  remove_placeholder.mli  specialize_params.ml  specialize_params.mli  specialize_structs.ml  stlc.ml  stlc.mli  (+11 more)
examples/: 2d_sdf_variants.glml  beaver.glml  checkerboard.glml  mandelbrot.glml  mouse_circle.glml  planet.glml  rainbow.glml  raymarch.glml  recursion.glml  warped_noise.glml
glml_compiler/: anf.ml  anf.mli  dune  glml_compiler.ml  glml_compiler.mli  glsl.ml  glsl.mli  lexer.ml  lexer.mli  parser.ml  stlc.ml  stlc.mli  translate.ml  translate.mli  typecheck.ml  typecheck.mli  uniquify.ml
jsoo/: dune  main.ml
playground/: index.html  main.ml  package-lock.json  package.json  vite.config.ts
tests/: dune  examples_test.ml  glml_compiler_tests.ml  glsl_validator.fallback.ml  glsl_validator.unix.ml  regression_tests.ml  runner.ml
web/: codemirror.html  dune  glml.html  index.html  main.js  main.ml  (+2 more)
(+8 files in other folders)
