(library
 (name glml_compiler)
 (modules
   utils
   compiler_error
   glml_compiler

   ; Compiler Passes
   lexer
   chomp
   parser

   frontend
   stlc
   uniquify
   typecheck
   monomorphize
   uncurry
   defunctionalize
   lambda_lift
   anf
   tail_call
   lower_variants
   promote_ints
   remove_placeholder
   lift_consts
   translate
   patch_main
   glsl)
 (libraries core topological_sort)
 (preprocess (pps ppx_jane))
 (inline_tests))
